# django-spreadsheet

./: .gitignore  .isort.cfg  .travis.yml  CHANGELOG.rst  CHANGES.rst  LICENSE  Makefile  README.rst  pyproject.toml  setup.py
.github/workflows/: run-tests.yml
django_spreadsheet/: __init__.py  django_spreadsheet.py
docs/: Makefile  api.rst  conf.py  index.rst  make.bat  quick-start.rst  reference.rst  requirements.txt
tests/: __init__.py  test_django_spreadsheet.py
tests/testdjangoproject/testapp/: models.py  views.py
tests/testdjangoproject/testapp/migrations/: 0001_initial.py
tests/testdjangoproject/testdjangoproject/: asgi.py  settings.py  urls.py  wsgi.py
